[tool.poetry]
name = "hexlet-code"
version = "0.4.0"
description = ""
authors = ["mouzilo <6473839@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.start:welcome"
brain-even = "brain_games.start:even"
brain-calc = "brain_games.start:calc"
brain-gcd = "brain_games.start:gcd"
brain-progression = 'brain_games.start:progression'
brain-prime = 'brain_games.start:prime'

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
